# roboptim-core-python

./: .clang-format  .gitignore  .gitmodules  .travis.build.sh  .travis.yml  CMakeLists.txt  README.md
examples/: profiling.py
include/roboptim/core/python/: to-python.hh
src/: CMakeLists.txt  common.cc  common.hh  roboptim.cc  to-python.cc  wrap.cc  wrap.hh  wrap.hxx
src/roboptim/core/: __init__.py
src/roboptim/core/visualization/: __init__.py  plotter.py
tests/: CMakeLists.txt  cached_function.py  finite_differences.py  function.py  function_pool.py  mpc.py  plot.py  schittkowski.py  solver_callback.py  to-python-simultaneous.stdout  to-python.cc  to-python.stdout  wrap.py
tests/schittkowski/: problem_13.py  problem_16.py
