INCLUDE_DIRECTORIES(SYSTEM ${PYTHON_INCLUDE_PATH})
INCLUDE_DIRECTORIES(SYSTEM ${NUMPY_INCLUDE_DIRS})

ADD_LIBRARY(wrap MODULE wrap.cc)
PKG_CONFIG_USE_DEPENDENCY(wrap roboptim-core)

SET_TARGET_PROPERTIES(wrap PROPERTIES PREFIX "")

INSTALL(TARGETS wrap
  DESTINATION ${PYTHON_SITELIB}/roboptim/core)

PYTHON_INSTALL_ON_SITE(roboptim __init__.py)
PYTHON_INSTALL_ON_SITE(roboptim/core __init__.py)
